fixed bug that weather page are not showing

--- a/travel.css
+++ b/travel.css
@@ -744,6 +744,12 @@ body, html {
   left:55%;
 }
 
+/* weather */
+#weather {
+  width: 100%;
+  height: 100%;
+}
+
 /* autocomplete */
 .autocomplete-suggestions { border: 1px solid #999; background: #FFF; overflow: auto; }
 .autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
